@@ -1,4 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+export(get_benthis_parameters)
+export(get_metier_lookup)
 export(get_vms)
 export(update_token)
